--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,10 +2,9 @@ name: Voting-App-Image-4302474
 
 # Trigger the workflow on push or pull request events
 on: [push, pull_request]
-
 jobs:
   # Define the build and test job
-  build:
+  build-and-test:
     # Specify the runner environment
     runs-on: ubuntu-latest
     # Define the steps of the job
@@ -49,4 +48,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/python-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/voting-app:latest
